<resources>
    <string name="app_name">AvianWatch</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Strings used for view labels -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="go_birding">Go Birding</string>
    <string name="my_observations">My Observations</string>
    <string name="identify_bird">Identify Bird</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="show_distance_in">Show Distance In:</string>
    <string name="bird_facts">Bird Facts</string>
    <string name="community">Community</string>
    <string name="about_us">About Us</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="blog_text">These birds like doing 10 – 15 circular laps just before sunset, around my neighborhood. Do you guys have any idea what does this mean?</string>
    <string name="reply">Reply</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="bird_name_species">Bird Name/species</string>
    <string name="behavior">Behavior</string>
    <string name="notes">Notes</string>
    <string name="add_observation">Add Observation</string>
    <string name="choose_max_search_distance">Choose The Max Search Distance</string>
    <string name="notes_cardview">Notes:</string>
    <string name="a_pair_of_flamingos_they_looked_liked_they_were_mating">A pair of Flamingos, they looked liked they were mating.</string>
    <string name="dashboard">Dashboard</string>
    <string name="blog">Community</string>
    <string name="imperial_miles">Imperial (Miles)</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="caption">Caption</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>