<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ObservationFragment"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:weightSum="2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPlantImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_menu_gallery"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="@color/text_color"
            app:strokeWidth="5dp"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabtnCamera"
            android:layout_width="55dp"
            android:layout_height="64dp"
            android:layout_marginTop="128dp"
            android:backgroundTint="#42637E"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imgPlantImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="21sp"
        android:textFontWeight="500"
        android:text="@string/take_a_picture"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="285dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:background="@drawable/edit_text_vview"
    >

    <EditText
        android:id="@+id/etBirdName"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#00FFFFFF"
        android:hint="@string/bird_name_species"
        android:textColor="@color/text_color"
        android:textColorHint="#5E000000" />

</androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <EditText
            android:id="@+id/etBirdBehavior"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/behavior"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/notes"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnAddObservation"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:textFontWeight="400"
        android:text="@string/add_observation"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/button_color"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-light"
        app:cornerRadius="25dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
